Avoid text and X overlap

--- a/src/app/dashboard/dashboard-tile.scss
+++ b/src/app/dashboard/dashboard-tile.scss
@@ -62,7 +62,7 @@
           justify-content: center;
           align-items: center;
           text-align: center;
-          padding: 0.5rem;
+          padding: 1rem 0.5rem;
           position: relative;
           word-break: break-word;
           .delete-item {
